# GIA

./: CMakeLists.txt  Makefile  plot.sh  plot_h.sh  test.sh
include/: SurfaceDataOut.h  boundary.h  coefficient.h  elastic.h  elastic_2_block.h  elastic_base.h  exact.h  parameters.h  preconditioner.h  preconditioner_2block.h  rhs.h
lib/: Makefile.dep  elastic-2d
source/: main.cc  parameters.cc
